--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <section id="schedule" class="section-with-bg">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h2>Event Schedule</h2>
+          <h2 class="black-h2">Event Schedule</h2>
           <p>Here is our event schedule</p>
         </div>
 
@@ -488,7 +488,7 @@
 
       <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <h2>Sponsors</h2>
+          <h2 class="black-h2" >Sponsors</h2>
         </div>
 
         <div class="row no-gutters supporters-wrap clearfix" data-aos="zoom-in" data-aos-delay="100">
