--- a/index.html
+++ b/index.html
@@ -79,14 +79,18 @@
         <div class="row">
           <div class="col-lg-6">
             <h2>About The Event</h2>
-            <p>Sed nam ut dolor qui repellendus iusto odit. Possimus inventore eveniet accusamus error amet eius aut
-              accusantium et. Non odit consequatur repudiandae sequi ea odio molestiae. Enim possimus sunt inventore in
-              est ut optio sequi unde.</p>
+            <p>Hey there! We are the HackHoodies, the annual student-run hackathon to be held virtually, in partnership with Major League Hacking (MLH) for the first time.  With over 280 attendees at our inaugural event, we hope to continue to grow in the coming years.
+
+              HackHoodie strives to promote technical innovation and highlight students’ skills and abilities, not only from Asia-Pacific (APAC) region but also from the other regions of United States, Europe and Canada.
+              
+              Our hope is to inspire a unique set of projects, ranging from analytics, health & fitness, sport inventions, cryptocurrency, to latest technologies like cloud computing, artificial intelligence and cybersecurity.
+              
+              We need sponsors like you to help facilitate this large event. With your contributions, we will be able to fund the costs needed to make HackHoodie a fantastic experience. Come be a part of the expanding tech community at HackHoodie!</p>
           </div>
-          <div class="col-lg-3">
+          <!-- <div class="col-lg-3">
             <h3>Where</h3>
             <p>Downtown Conference Center, New York</p>
-          </div>
+          </div> -->
           <div class="col-lg-3">
             <h3>When</h3>
             <p>Monday to Wednesday<br>10-12 December</p>
