--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container contain" data-aos="zoom-in" data-aos-delay="100">
-      <img src="https://w0.peakpx.com/wallpaper/657/229/HD-wallpaper-hacker-matrix-faceless-glow-hayatikdrgl-light-live-mask-move-orange-time.jpg" align="left">
-      <div class="mb-4 pb-0 centered" align="right">HACK<span>HOODIE</span></div>
+      <img src="https://wallpapertag.com/wallpaper/full/9/9/4/148717-cool-black-and-green-background-1920x1200-htc.jpg" align="left">
+      <div class="mb-4 pb-0 centered" align="right">HACK<span class="hoodie">HOODIE</span></div>
       <!-- <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox play-btn mb-4"></a> -->
       <!-- <a href="#about" class="about-btn scrollto">About The Event</a> -->
     </div>
