--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center ">
     <div class="container-fluid container-xxl d-flex align-items-center">
-
+      <!-- <a href="index.html" class="hacklogo"><img src="assets\img\hackHoodie.png" alt=""></a> -->
       <div id="logo" class="me-auto">
+        
         <!-- Uncomment below if you prefer to use a text logo -->
         <h1><a href="index.html">Hack<span class="head">Hoodie</span></a></h1>
         <!-- <a href="index.html" class="scrollto"><img src="assets/img/logo.png" alt="" title=""></a> -->
@@ -55,8 +56,7 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-      <!-- <a class="buy-tickets scrollto" href="#buy-tickets">Join Discord</a> -->
-      <a class="buy-tickets scrollto" href="#buy-tickets">Register Now</a>
+     
     </div>
   </header><!-- End Header -->
 
@@ -64,9 +64,13 @@
   <section id="hero">
     <div class="hero-container contain" data-aos="zoom-in" data-aos-delay="100">
       <img src="https://wallpapertag.com/wallpaper/full/9/9/4/148717-cool-black-and-green-background-1920x1200-htc.jpg" align="left">
+      <img src="assets\img\hackHoodie.png" alt="" align="center" class="centered xyz">
       <div class="mb-4 pb-0 centered" align="right">HACK<span class="hoodie">HOODIE</span></div>
+      <div class="contain dates">26<sup>th </sup> to  27<sup>th </sup> March 2022</div>
       <!-- <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox play-btn mb-4"></a> -->
       <!-- <a href="#about" class="about-btn scrollto">About The Event</a> -->
+       <a class="discord contain btn" href="https://discord.gg/8AXFQpXr" target="blank">Join Discord</a> 
+       <a class="register contain btn" href="https://hackhoodie.devpost.com/" target="blank">Register Now</a>
     </div>
   </section><!-- End Hero Section -->
 
