--- a/index.html
+++ b/index.html
@@ -688,12 +688,13 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Find Us Online</h4>
             
-
+            <div><a href="contact@hackhoodie.tech" class="mail">contact@hackhoodie.tech</a>
+            </div>
             <div class="social-links">
-              <a href="https://twitter.com/hackhoodie" class="twitter"><i class="bi bi-twitter"></i></a>               
+              <a href="https://twitter.com/hackhoodie" class="twitter" target="blank"><i class="bi bi-twitter"></i></a>               
               <!-- <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> -->               
-              <a href="https://www.instagram.com/hackhoodie" class="instagram"><i class="bi bi-instagram"></i></a>               
-              <!-- <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a> -->
+              <a href="https://www.instagram.com/hackhoodie" class="instagram" target="blank"><i class="bi bi-instagram"></i></a>               
+              <a href="https://www.linkedin.com/company/hackhoodie" class="linkedin" target="blank"><i class="bi bi-linkedin"></i></a>
             </div>
 
           </div>
