--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
           <div class="col-lg-3 col-md-6 footer-contact">
             <h4>Find Us Online</h4>
             
-            <div><a href="contact@hackhoodie.tech" class="mail">contact@hackhoodie.tech</a>
+            <div><a href="mailto:contact@hackhoodie.tech" class="mail">contact@hackhoodie.tech</a>
             </div>
             <div class="social-links">
               <a href="https://twitter.com/hackhoodie" class="twitter" target="blank"><i class="bi bi-twitter"></i></a>               
