Adding sponsors logo

--- a/index.html
+++ b/index.html
@@ -509,22 +509,22 @@
     </section><!-- End Gallery Section -->
 
     <!-- ======= Supporters Section ======= -->
-    <section id="supporters" class="section-with-bg" style="    height: 500px;">
+    <section id="supporters" class="section-with-bg" style="    height: 700px;">
 
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2 class="black-h2" >Sponsors</h2>
         </div>
-        <div class="row">
-          <center>
+        <!-- <div class="row"> -->
+          <!-- <center>
             TO BE DECLARED SOON!
-          </center>
-        </div>
-        <!-- <div class="row no-gutters supporters-wrap clearfix" data-aos="zoom-in" data-aos-delay="100"> -->
+          </center> -->
+        <!-- </div> -->
+         <div class="row no-gutters supporters-wrap clearfix" data-aos="zoom-in" data-aos-delay="100">
 
-          <!-- <div class="col-lg-3 col-md-4 col-xs-6">
+           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
-              <img src="assets/img/supporters/1.png" class="img-fluid" alt="">
+              <img src="assets/img/supporters/GMC LogoS.png" class="img-fluid" alt="">
             </div>
           </div>
 
@@ -572,7 +572,7 @@
 
         </div>
 
-      </div> -->
+      </div>
 
     </section><!-- End Sponsors Section -->
 
