--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <img src="https://wallpapertag.com/wallpaper/full/9/9/4/148717-cool-black-and-green-background-1920x1200-htc.jpg" align="left">
       <img src="assets\img\hackHoodie.png" alt="" align="center" class="centered xyz">
       <div class="mb-4 pb-0 centered" align="right">HACK<span class="hoodie">HOODIE</span></div>
-      <div class="contain dates">26<sup>th </sup> to  27<sup>th </sup> March 2022</div>
+      <div class="contain dates">26<sup>th </sup> to  28<sup>th </sup> March 2022</div>
       <!-- <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox play-btn mb-4"></a> -->
       <!-- <a href="#about" class="about-btn scrollto">About The Event</a> -->
        <a class="discord contain btn" href="https://discord.gg/8AXFQpXr" target="blank">Join Discord</a> 
@@ -95,7 +95,7 @@
           </div> -->
           <div class="col-lg-3 when">
             <h3>When</h3>
-            <p>Monday to Wednesday<br>26-27 March</p>
+            <p>Monday to Wednesday<br>26-28 March</p>
           </div>
         </div>
       </div>
@@ -515,12 +515,12 @@
         <div class="section-header">
           <h2 class="black-h2" >Sponsors</h2>
         </div>
-        <!-- <div class="row"> -->
-          <!-- <center>
+        <div class="row">
+          <center>
             TO BE DECLARED SOON!
-          </center> -->
-        <!-- </div> -->
-         <div class="row no-gutters supporters-wrap clearfix" data-aos="zoom-in" data-aos-delay="100">
+          </center>
+        </div>
+         <!-- <div class="row no-gutters supporters-wrap clearfix" data-aos="zoom-in" data-aos-delay="100">
 
            <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
@@ -530,47 +530,12 @@
 
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
-              <img src="assets/img/supporters/2.png" class="img-fluid" alt="">
+              <img src="assets/img/supporters/xyz.8ad1c33.svg" class="img-fluid" alt="">
             </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-xs-6">
-            <div class="supporter-logo">
-              <img src="assets/img/supporters/3.png" class="img-fluid" alt="">
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-xs-6">
-            <div class="supporter-logo">
-              <img src="assets/img/supporters/4.png" class="img-fluid" alt="">
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-xs-6">
-            <div class="supporter-logo">
-              <img src="assets/img/supporters/5.png" class="img-fluid" alt="">
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-xs-6">
-            <div class="supporter-logo">
-              <img src="assets/img/supporters/6.png" class="img-fluid" alt="">
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-xs-6">
-            <div class="supporter-logo">
-              <img src="assets/img/supporters/7.png" class="img-fluid" alt="">
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4 col-xs-6">
-            <div class="supporter-logo">
-              <img src="assets/img/supporters/8.png" class="img-fluid" alt="">
-            </div>
-          </div>
-
+          </div> -->
+<!-- copy upper div and change image. -->
         </div>
+  
 
       </div>
 
@@ -612,7 +577,7 @@
                 <div data-bs-toggle="collapse" href="#faq3" class="collapsed question">How long will it be on for? <i class="bi bi-chevron-down icon-show"></i><i class="bi bi-chevron-up icon-close"></i></div>
                 <div id="faq3" class="collapse" data-bs-parent=".faq-list">
                   <p class="row1">
-                    The event will be running for about 48 hours from 26th March to 27th March. 
+                    The event will be running for about 48 hours from 26th March to 28th March. 
                   </p>
                 </div>
               </li>
@@ -695,6 +660,9 @@
               <!-- <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> -->               
               <a href="https://www.instagram.com/hackhoodie" class="instagram" target="blank"><i class="bi bi-instagram"></i></a>               
               <a href="https://www.linkedin.com/company/hackhoodie" class="linkedin" target="blank"><i class="bi bi-linkedin"></i></a>
+              <a href="https://discord.gg/v2jr4hvdRu" class="discord" target="blank"><i class="bi bi-discord"></i></a>
+              <a href="#" class="youtube" target="blank"><i class="bi bi-youtube"></i></a>
+              <a href="mailto:contact@hackhoodie.tech" class="envelope" target="blank"><i class="bi bi-envelope"></i></a>
             </div>
 
           </div>
