--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="contain dates">26<sup>th </sup> to  28<sup>th </sup> March 2022</div>
       <!-- <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox play-btn mb-4"></a> -->
       <!-- <a href="#about" class="about-btn scrollto">About The Event</a> -->
-       <a class="discord contain btn" href="https://discord.gg/8AXFQpXr" target="blank">Join Discord</a> 
+       <a class="discord contain btn" href="https://discord.gg/v2jr4hvdRu" target="blank">Join Discord</a> 
        <a class="register contain btn" href="https://hackhoodie.devpost.com/" target="blank">Register Now</a>
     </div>
   </section><!-- End Hero Section -->
