--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <!-- <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox play-btn mb-4"></a> -->
       <!-- <a href="#about" class="about-btn scrollto">About The Event</a> -->
        <a class="discord contain btn" href="https://discord.gg/QMgFKScE8d" target="blank">Join Discord</a> 
-       <a class="register contain btn" href="https://hackhoodie.devpost.com/" target="blank">Register Now</a>
+       <a class="register contain btn" href="https://f4ki1wp8ldq.typeform.com/to/h4xQODwg" target="blank">Register Now</a>
     </div>
   </section><!-- End Hero Section -->
 
@@ -95,7 +95,7 @@
           </div> -->
           <div class="col-lg-3 when">
             <h3>When</h3>
-            <p>Monday to Wednesday<br>25-27 March</p>
+            <p>Friday to Sunday<br>25-27 March</p>
           </div>
         </div>
       </div>
@@ -509,31 +509,56 @@
     </section><!-- End Gallery Section -->
 
     <!-- ======= Supporters Section ======= -->
-    <section id="supporters" class="section-with-bg" style="    height: 700px;">
+    <section id="supporters" class="section-with-bg" style="    height: 937px;">
 
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2 class="black-h2" >Sponsors</h2>
         </div>
-        <div class="row">
+        <!-- <div class="row">
           <center>
             TO BE DECLARED SOON!
           </center>
-        </div>
-         <!-- <div class="row no-gutters supporters-wrap clearfix" data-aos="zoom-in" data-aos-delay="100">
+        </div> -->
+         <div class="row no-gutters supporters-wrap clearfix" data-aos="zoom-in" data-aos-delay="100">
 
            <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
-              <img src="assets/img/supporters/GMC LogoS.png" class="img-fluid" alt="">
+              <img src="assets\img\DO_Logo_Vertical_White.png" class="img-fluid" alt="">
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
-              <img src="assets/img/supporters/xyz.8ad1c33.svg" class="img-fluid" alt="">
+              <img src="assets\img\xyz-logo-white.png" class="img-fluid" alt="">
             </div>
-          </div> -->
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="supporter-logo">
+              <img src="assets\img\taskade-appstore-icon.png" class="img-fluid" alt="">
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-xs-6">
+            <div class="supporter-logo">
+              <img src="assets\img\Voiceflow_Logo_full-removebg-preview.png" class="img-fluid" alt="">
+            </div>
+          </div>
 <!-- copy upper div and change image. -->
+<!-- <div class="certify">
+<div class="section-header">
+  <h2 class="black-h2 cert" >Certificate Partner</h2>
+</div>
+<center>
+  <div class="col-lg-3 col-md-4 col-xs-6">
+    <div class="supporter-logo">
+      <img src="assets\img\supporters\GMC LogoS.png" class="img-fluid" alt="">
+    </div>
+  </div>
+</center>
+</div> -->
+
         </div>
   
 
