--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <!-- <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox play-btn mb-4"></a> -->
       <!-- <a href="#about" class="about-btn scrollto">About The Event</a> -->
        <a class="discord contain btn" href="https://discord.gg/QMgFKScE8d" target="blank">Join Discord</a> 
-       <a class="register contain btn" href="https://f4ki1wp8ldq.typeform.com/to/h4xQODwg" target="blank">Register Now</a>
+       <a class="register contain btn" href="https://s.surveyplanet.com/00m94hd3" target="blank">Register Now</a>
     </div>
   </section><!-- End Hero Section -->
 
